2015-Nov-09, Ulf Griesmann
- add refractive index of Hydrogen Silesquioxane (HSQ)

2015-May-14, Ulf Griesmann
- added data for the ma-N1400 negative i-line and e-beam resist
  from Micro Resist Technology, GmbH
      
2015-April-15, Ulf Griesmann
- much improved dataset for litho/BARLi_II (VASE measurement)
- new VASE measurements for litho/S1800 photoresist

2015-January-06, Ulf Griesmann
- improved dataset for LOR-A with better wavelength coverage

2014-December-24, Ulf Griesmann
- new measured data set for Dow MICROPOSIT LOL material.

2014-December-23, Ulf Griesmann
- finally added good data for the advanced i-line resists
  Ultra-i123 and PFI-88 (unexposed and bleached).

2014-December-08, Ulf Griesmann
- added better data set for Brewer Science WiDE-C bottom
  antireflection coating
- added indices for sputter coated SiO2 and TiO2
- renamed data for MicroChem LOR type A resist

2014-September-30, Ulf Griesmann
- renamed analyic/n_sodalime_glass.m --> n_sodalime.m
- fixed and updated the README
- added functions in the 'analytic' collection for MMA and PMMA;
  provided by Cory D. Cress, NRL
- added the main 'book' from http://refractiveindex.info
- made a Git repository for the index collections.

2014-January-24, Ulf Griesmann
- renamed collection 'nist' into 'litho', because the contents
  is primarily lithography related and also because the data in the 
  collection are not in any way endorsed by NIST.