@@ -20,19 +20,19 @@ function [nk] = n_BF33(lambda)
 
 % Initial version, Ulf Griesmann, December 2013
 
-% check arguments
-if nargin < 1
-    error('n_BF33: missing wavelength argument.');
+    % check arguments
+    if nargin < 1
+        error('n_BF33: missing wavelength argument.');
+    end
+    if min(lambda) < 0.36 || max(lambda) > 1.55
+        warning('n_BF33: one or more wavelength(s) out of valid range.');
+    end
+    
+    % set up Sellmeier formula constants
+    par.A = [0.302617787967302, 0.837991910905040, 0.971378676937668];
+    par.B = [-3.69434478207298e-04, 1.12585937283431e-02, 9.88574965182944e+01];
+    
+    % calculate index
+    nk = complex(n_sellmeier(lambda, par));
+    
 end
-if min(lambda) < 0.36 || max(lambda) > 1.55
-    warning('n_BF33: one or more wavelength(s) out of valid range.');
-end
-
-% set up Sellmeier formula constants
-par.A = [0.2799, 0.8607, 0.9766];
-par.B = [-8.7450e-04, 0.0111, 99.3614];
-
-% calculate index
-nk = complex(n_sellmeier(lambda, par));
-
-return
