@@ -1,3 +1,7 @@
+2015-Dec-20, Ulf Griesmann
+- add Sellmeier formula for AZ Aquatar to enable
+  extrapolation of data from data sheet to visible wavelengths.
+
 2015-Nov-09, Ulf Griesmann
 - add refractive index of Hydrogen Silesquioxane (HSQ)
 
